samples/_failures_safe/1761002559_d8b26e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72d35af4.c: In function ‘main’:
./samples/SAFE/__tmp_72d35af4.c:176:5: error: expected expression at end of input
  176 |     if (fgets(choice_str, sizeof(choice_str), stdin) ==
      |     ^~
./samples/SAFE/__tmp_72d35af4.c:176:5: error: expected declaration or statement at end of input
